Rename getListeners() to getEntityListeners() and use Collections.unmodifiableSet()
Co-authored-by: bevans2000 <20720166+bevans2000@users.noreply.github.com>